# Atlas_Server

./: README.md
Atlas200dk_Server/: .~lock.智能分析服务平台详细设计 .doc#  智能分析服务平台详细设计 .doc
Atlas200dk_Server/AtlasServer/: CMakeLists.txt
Atlas200dk_Server/AtlasServer/Qt/build-AtlasServer-Desktop_Qt_5_9_5_GCC_64bit-Debug/: AtlasServer.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Atlas200dk_Server/AtlasServer/Qt/build-AtlasServer-Desktop_Qt_5_9_5_GCC_64bit-Release/: AtlasServer  AtlasServer.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Atlas200dk_Server/AtlasServer/source/: HttpInterfaceHandler.cpp  HttpInterfaceHandler.h  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp
Atlas200dk_Server/AtlasServer/source/AnalyseSingle/: AnalyseSingleService.cpp  AnalyseSingleService.h  SingleObjectManager.cpp  SingleObjectManager.h
Atlas200dk_Server/AtlasServer/source/AnalyseSingle/Algorithm/: Main.h  MeterV2Object.cpp  MeterV2Object.h  MeterV2Train.cpp  MeterV2Train.h  data_type.h  tool_api.h
Atlas200dk_Server/AtlasServer/source/AnalyseSingle/AnalyseBase/: AnalyseCommon.cpp  AnalyseCommon.h  AnalyseObject.cpp  AnalyseObject.h  AnalyseTrain.cpp  AnalyseTrain.h
Atlas200dk_Server/AtlasServer/source/AnalyseSingle/ThreadPool/: Task.h  TaskContainer.cpp  TaskContainer.h  ThreadPool.cpp  ThreadPool.h
Atlas200dk_Server/AtlasServer/source/AnalyseSingle/include/meterReg/: HYAMR_meterReg.h  amcomdef.h  meterDec.h  meterDec_COM.h  wyMatchRigidBodyIF.h  wyMatchRigidBodyStruct.h  wyVACommon.h
Atlas200dk_Server/AtlasServer/source/Device/: dev_system.cpp  dev_system.h
Atlas200dk_Server/AtlasServer/source/Manager/: DataBaseInterface.cpp  DataBaseInterface.h  FileManager.cpp  FileManager.h  GlobalDataManager.cpp  GlobalDataManager.h  NetScheduleLib.cpp  NetScheduleLib.h
Atlas200dk_Server/AtlasServer/source/Manager/rapidxml/: rapidxml.hpp  rapidxml_print.hpp
Atlas200dk_Server/AtlasServer/source/Manager/sqlite/: StringConvert.cpp  StringConvert.h  sqliteHelpper.cpp  sqliteHelpper.h
Atlas200dk_Server/AtlasServer/source/foundation/: basic_controller.cpp  network_utils.cpp
Atlas200dk_Server/AtlasServer/source/foundation/include/: http_basic_handler.hpp  network_utils.hpp  usr_interrupt_handler.hpp
Atlas200dk_Server/atlas-aarch64/boost-aarch64/lib/: libboost_chrono.so.1.64.0  libboost_filesystem.so.1.64.0  libboost_graph.so.1.64.0  libboost_iostreams.so.1.64.0  libboost_locale.so.1.64.0  libboost_log_setup.so.1.64.0  libboost_math_c99.so.1.64.0  libboost_math_c99l.so.1.64.0  libboost_math_tr1.so.1.64.0  libboost_prg_exec_monitor.so.1.64.0  libboost_program_options.so.1.64.0  libboost_random.so.1.64.0  libboost_regex.so.1.64.0  libboost_serialization.so.1.64.0  libboost_signals.so.1.64.0  libboost_thread.so.1.64.0  libboost_unit_test_framework.so.1.64.0
Atlas200dk_Server/atlas-aarch64/cpprestsdk-aarch64/lib/cmake/cpprestsdk/: cpprestsdk-targets-release.cmake  cpprestsdk-targets.cmake
Atlas200dk_Server/atlas-aarch64/log4cpp/lib/: liblog4cpp.so.5.0.6
Atlas200dk_Server/atlas-aarch64/openssl-aarch64/include/openssl/: opensslconf.h
Atlas200dk_Server/atlas-aarch64/openssl-aarch64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Atlas200dk_Server/atlas-aarch64/openssl-aarch64/ssl/man/man1/: CA.pl.1  asn1parse.1  c_rehash.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  rand.1  req.1  ripemd160.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  smime.1  speed.1  spkac.1  (+5 more)
Atlas200dk_Server/atlas-aarch64/openssl-aarch64/ssl/man/man3/: .3  ASN1_OBJECT_new.3  ASN1_STRING_cmp.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_generate_v3.3  BF_cbc_encrypt.3  BIO_eof.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_callback_arg.3  BIO_get_cipher_status.3  BIO_gets.3  BIO_push.3  (+292 more)
(+3 files in other folders)
